<?xml version="1.0" encoding="utf-8"?>
<!--
    Макет экрана аутентификации по SMS.

    Содержит:
    - Логотип компании,
    - Поля ввода номера телефона и SMS-кода,
    - Кнопки "Получить код" и "Проверить код",
    - Сообщение об отправке SMS,
    - Версию приложения внизу.

    Использует Material Design компоненты (TextInputLayout, Button).
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    tools:context=".MainActivity">

    <!-- Версия приложения внизу экрана -->
<TextView
android:id="@+id/versionLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="8dp"
android:layout_marginEnd="8dp"
android:layout_marginBottom="8dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
tools:text="Версия: 1.0.0" />

    <!-- Логотип компании -->
<ImageView
android:id="@+id/imageView"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginStart="56dp"
android:layout_marginTop="32dp"
android:layout_marginEnd="56dp"
android:contentDescription="@string/company_logo_cd"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toTopOf="parent"
app:srcCompat="@drawable/icon" />

    <!-- Заголовок поля "Номер телефона" -->
<TextView
android:id="@+id/textView2"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="96dp"
android:text="@string/phone_number"
android:textColor="@color/black"
android:textStyle="bold"
app:layout_constraintEnd_toEndOf="@+id/phoneInputTIL"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="@+id/phoneInputTIL"
app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Заголовок поля "Код авторизации" -->
<TextView
android:id="@+id/textView3"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="40dp"
android:text="@string/auth_code"
android:textColor="@color/black"
android:textStyle="bold"
app:layout_constraintEnd_toEndOf="@+id/codeInputTIL"
app:layout_constraintHorizontal_bias="0.0"
app:layout_constraintStart_toStartOf="@+id/codeInputTIL"
app:layout_constraintTop_toBottomOf="@+id/phoneInputTIL" />

    <!-- Поле ввода номера телефона -->
<com.google.android.material.textfield.TextInputLayout
android:id="@+id/phoneInputTIL"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginStart="56dp"
android:layout_marginTop="16dp"
android:layout_marginEnd="56dp"
app:hintEnabled="false"
app:expandedHintEnabled="false"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@+id/textView2"
app:prefixText="+7"> <!-- Автоматически добавляет +7 перед вводом -->

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/phoneInput"
    style="@style/MyCustomTextInputStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:maxLength="10"
android:hint="@string/phoneHint"
android:inputType="number" />
</com.google.android.material.textfield.TextInputLayout>

    <!-- Поле ввода SMS-кода -->
<com.google.android.material.textfield.TextInputLayout
android:id="@+id/codeInputTIL"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="16dp"
app:hintEnabled="false"
app:layout_constraintEnd_toEndOf="@+id/phoneInputTIL"
app:layout_constraintStart_toStartOf="@+id/phoneInputTIL"
app:layout_constraintTop_toBottomOf="@+id/textView3">

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/codeInput"
    style="@style/MyCustomTextInputStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/codeHint"
    android:inputType="number" />
</com.google.android.material.textfield.TextInputLayout>

    <!-- Кнопка "Получить код" -->
<Button
android:id="@+id/getCodeButton"
style="@style/MyCustomButtonStyle"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="5dp"
android:layout_marginEnd="16dp"
android:layout_marginBottom="16dp"
android:enabled="false"
    android:text="@string/buttonGetCode"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/guideline"
    app:layout_constraintStart_toStartOf="@+id/codeInputTIL"
    app:layout_constraintTop_toBottomOf="@+id/codeSentMessage"
    app:layout_constraintVertical_bias="0.0" />

    <!-- Кнопка "Проверить код" -->
<Button
android:id="@+id/checkCodeButton"
style="@style/MyCustomButtonStyle"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginStart="16dp"
android:enabled="false"
    android:text="@string/buttonCheckCode"
    android:textSize="12sp"
    app:layout_constraintBottom_toBottomOf="@+id/getCodeButton"
    app:layout_constraintEnd_toEndOf="@+id/codeInputTIL"
    app:layout_constraintStart_toStartOf="@+id/guideline"
    app:layout_constraintTop_toTopOf="@+id/getCodeButton" />

    <!-- Вертикальная направляющая по центру экрана для выравнивания кнопок -->
<androidx.constraintlayout.widget.Guideline
android:id="@+id/guideline"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="vertical"
app:layout_constraintGuide_percent=".5" /> <!-- 50% ширины экрана -->

    <!-- Сообщение об успешной отправке SMS -->
<TextView
android:id="@+id/codeSentMessage"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:layout_marginTop="5dp"
android:text="@string/sms_sent_message"
android:textAlignment="center"
android:textColor="#48FF00"
    android:textStyle="bold"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="@+id/codeInputTIL"
    app:layout_constraintStart_toStartOf="@+id/codeInputTIL"
    app:layout_constraintTop_toBottomOf="@+id/codeInputTIL" />

    </androidx.constraintlayout.widget.ConstraintLayout>